# OsmAnd-core-legacy

./: .clang-format  .gitignore  CMakeLists.txt
native/include/: Logging.h  json.hpp
native/include/boost/container_hash/: hash.hpp
native/src/: ElapsedTimer.cpp  ElapsedTimer.h  LinkedHashSet.h  NetworkDBPointRouteInfo.cpp  NetworkDBPointRouteInfo.h  binaryRead.cpp  binaryRead.h  binaryRoutePlanner.cpp  binaryRoutePlanner.h  common.cpp  commonOsmAndCore.h  commonRendering.cpp  commonRendering.h  generalRouter.cpp  generalRouter.h  gpxAdvancedPointsMatchApproximation.cpp  gpxAdvancedPointsMatchApproximation.h  gpxMultiSegmentsApproximation.cpp  gpxMultiSegmentsApproximation.h  gpxRouteApproximation.cpp  gpxRouteApproximation.h  gpxSegmentsApproximation.cpp  gpxSegmentsApproximation.h  gpxSimplePointsMatchApproximation.cpp  gpxSimplePointsMatchApproximation.h  heightmapRenderer.cpp  heightmapRenderer.h  hhBinaryRead.h  hhRouteDataStructure.cpp  hhRouteDataStructure.h  hhRoutePlanner.cpp  hhRoutePlanner.h  java_latLon.h  java_latlon.h  java_renderRules.h  java_wrap.cpp  java_wrap.h  multipolygons.cpp  multipolygons.h  mvtWrite.h  (+48 more)
native/src/RaptorEngine/: RaptorEngine.cpp  RaptorEngine.h  TransportContextBridge.cpp  TransportContextBridge.h  raptorTransportPlanner.cpp  raptorTransportPlanner.h
native/src/proto/: OBF.pb.cc  OBF.pb.h
targets/: arm64-macosx-clang.sh  intel-macosx.sh
targets/.cmake/: CMakeLists.txt
targets/.cmake/projects/OsmAndCore/: CMakeLists.txt
targets/.cmake/projects/freetype/: CMakeLists.txt
targets/.cmake/projects/gdal/: CMakeLists.txt  cpl_config.cmake
targets/.cmake/projects/harfbuzz/: CMakeLists.txt
targets/.cmake/projects/libpng/: CMakeLists.txt
targets/.cmake/projects/proj/: CMakeLists.txt
targets/.cmake/projects/protobuf/: CMakeLists.txt
targets/.cmake/projects/skia/: CMakeLists.txt
targets/.cmake/projects/sqlite/: CMakeLists.txt
targets/.cmake/projects/zlib/: CMakeLists.txt
targets/.cmake/targets/: amd64-linux-clang.cmake  amd64-linux-gcc.cmake  arm-linux-gnueabi-gcc.cmake  arm64-macosx-clang.cmake  i686-linux-gcc.cmake  intel-darwin-clang.cmake  intel-macosx-clang.cmake
targets/android/OsmAndCore/: Android.mk
targets/android/freetype/: Android.mk
targets/android/harfbuzz/: Android.mk
targets/android/libpng/: Android.mk
targets/android/lua/: Android.mk
targets/android/skia/: Android.mk
targets/linux/OsmAndCore/src/: Logging.cpp
